22 May 2007: Wouter
	- outbound query list for modules and support to callback with the
	  outbound entry to the module.
	- testbound support for new serviced queries.
	- test for retry to TCP cannot use testbound any longer.
	- testns test for EDNS fallback, test for TCP fallback already exists.

21 May 2007: Wouter
	- small comment on hash table locking.
	- outside network serviced queries, contain edns and tcp fallback,
	  and udp retries and rtt timing.

16 May 2007: Wouter
	- lruhash_touch() would cause locking order problems. Fixup in 
	  lock-verify in case locking cycle is found.
	- services/cache/rrset.c for rrset cache code.
	- special rrset_cache LRU updating function that uses the rrset id.
	- no dependencies calculation when make clean is called.
	- config settings for infra cache.
	- daemon code slightly cleaner, only creates caches once.

15 May 2007: Wouter
	- host cache code.
	- unit test for host cache.

14 May 2007: Wouter
	- Port to OS/X and Dec Alpha. Printf format and alignment fixes.
	- extensive lock debug report on join timeout.
	- proper RTT calculation, in utility code.
	- setup of services/cache/infra, host cache.

11 May 2007: Wouter
	- iterator/iterator.c module.
	- fixup to pass reply_info in testcode and in netevent.

10 May 2007: Wouter
	- created release-0.3 svn tag.
	- util/module.h
	- fixed compression - no longer compresses root name.

9 May 2007: Wouter
	- outside network cleans up waiting tcp queries on exit.
	- fallback to TCP.
	- testbound replay with retry in TCP mode.
	- tpkg test for retry in TCP mode, against ldns-testns server.
	- daemon checks max number of open files and complains if not enough.
	- test where data expires in the cache.
	- compiletests: fixed empty body ifstatements in alloc.c, in case
	  locks are disabled.

8 May 2007: Wouter
	- outgoing network keeps list of available tcp buffers for outgoing 
	  tcp queries.
	- outgoing-num-tcp config option.