@@ -526,7 +526,7 @@ static int test_compfunc(void* key1, void* key2)
 
 static void test_delkey(void* key, void* ATTR_UNUSED(arg), int l)
 {
-	if(l) lock_rw_unlock(&((struct testkey*)key)->entry.lock);
+	if(l) { lock_rw_unlock(&((struct testkey*)key)->entry.lock); }
 	delkey((struct testkey*)key);
 }
 
